# aio-2024-hw

./: .gitignore  README.md  environment.yml  environment.yml.test  pyproject.toml  requirements.txt  sonar-project.properties
module-1/01_06_2024_M01EX01/: exercise_basic_python.ipynb
module-1/08_06_2024_M01EX02/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  multi_choice_ex5.py  multi_choice_ex6.py
module-1/15_06_2024_M01EX03/: ex1.py  ex2.py  ex3.py  ex4.py
module-2/06_07_2024_M02EX01/: ex.ipynb
module-2/13_07_2024_M02EX02/: ex.ipynb
module-2/20_07_2024_M02EX03/: exercise-13_19.ipynb  exercise-1_13.ipynb
module-2/27_07_2024_M02EX04/: ex.ipynb
module-3/08_09_2024_M03EX04/: README.md  ensemble_learning.ipynb
module-3/13_09_2024_M03EX05/: README.md  xgboost.ipynb
module-3/17_08_2024_M03EX01/: README.md  data_analysis.ipynb
module-3/24_08_2024_M03EX02/: README.md  knn_kmean.ipynb
module-3/31_08_2024_M03EX02/: decision_tree.ipynb
module-4/09_10_2024_M04W01/: README.md
module-4/12_10_2024_M04W03/: README.md  genetic_algorithm.ipynb
module-4/28_09_2024_M04W01/: linear_regression.ipynb
module-5/09_11_2024_M05W03/: README.md  regression_task_1.ipynb
module-5/16_11_2024_M05W04/: README.md
module-5/26_10_2024_M05W01/: README.md  logistic_regression.ipynb
module-5/M05W02/: ex.ipynb
module-5/test/: Base.ipynb  module-4-5.ipynb
module-6/06_12_2024_M06W01/: README.md  ex_lenet_mnist.ipynb  ex_ntx_scv.ipynb
module-6/07_12_2024_M06W02/: ex.ipynb  weather_cls.ipynb
utils/: gdrive_downloader.py  memory_tracker.py
(+30 files in other folders)
